# quantum-resistant-agri-claims

./: .gitignore  AI_MODEL_INTEGRATION.md  CLEAR_DATABASE.md  DEPENDENCIES_SUMMARY.md  Dockerfile  GITHUB_SETUP.md  IMPLEMENTATION_STATUS.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  RESET_DOCKER.md  append_log.py  audit_verify.py  checkpoint.py  crypto.py  docker-compose.yml  epoch_manager.py  key_derivation.py  pyproject.toml  verify_log.py
ai/: __init__.py  ai_score.py  config.py  fraud_model.pkl
api/: __init__.py  main.py  session_manager.py
evaluation/: analysis.ipynb  results.csv  summary.txt
frontend/: .dockerignore  Dockerfile  Dockerfile.simple  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/submit-claim/: page.tsx
frontend/components/: MerkleTreeVisual.tsx
frontend/components/common/: ActivityPanel.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  NavBar.tsx  Providers.tsx  SecurityBadge.tsx
frontend/contexts/: ActivityContext.tsx  LanguageContext.tsx  SecurityContext.tsx  SessionContext.tsx  ThemeContext.tsx
frontend/theme/: palette.ts  theme.ts
frontend/types/: index.ts
mineral/encryption/: hybrid_encryptor.py
models/: __init__.py  database.py
scripts/: clear_database.py  evaluate_api.py  health_check.sh  init_db.sql  reset_docker.ps1  reset_docker.sh
tests/: __init__.py  test_ai_fraud.py  test_api_endpoints.py  test_audit_verify.py  test_crypto.py  test_key_manager.py  test_tamper_log.py
(+2 files in other folders)
