[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "models*", "ai*"]

[project]
name = "insurance-claim-system"
version = "0.1.0"
description = "Post-Quantum Secure Insurance Claim System with Lattice-Based Cryptography"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    
    # Post-quantum cryptography
    "kyber-py>=1.0.1",
    "cryptography>=45.0.6",
    "dilithium-py>=0.1.0",  # ML-DSA-65 (Dilithium-3) signatures
    
    # Database
    "sqlalchemy>=2.0.42",
    "psycopg2-binary>=2.9.10",
    
    # Caching
    "redis>=6.4.0",
    "hiredis>=2.0.0",
    
    # AI/ML
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "xgboost>=2.0.0",  # Optional for XGBoost models
    
    # Utilities
    "python-magic>=0.4.27",
    "requests>=2.32.4",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
